fix(components): wrap required asterisk in span to support multiline label | bh | #811

--- a/packages/components/src/components/form/select-wrapper/select-wrapper.scss
+++ b/packages/components/src/components/form/select-wrapper/select-wrapper.scss
@@ -168,14 +168,6 @@
       color: $p-color-theme-dark-default;
     }
 
-    &--required {
-      display: inline-block;
-      &::after {
-        content: '*';
-        color: $p-color-notification-error;
-      }
-    }
-
     &--disabled {
       #{$bem-block}--theme-light & {
         color: $p-color-state-disabled;
@@ -184,6 +176,13 @@
       #{$bem-block}--theme-dark & {
         color: $p-color-theme-dark-state-disabled;
       }
+    }
+  }
+
+  &__required {
+    &::after {
+      content: '*';
+      color: $p-color-notification-error;
     }
   }
 
